--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,5 +1,10 @@
 pipeline {
     agent any
+        environment { 
+        JAVA_HOME = '/usr/lib/jvm/java-17-openjdk-amd64'
+        M2_HOME = '/opt/maven'
+        PATH = "${JAVA_HOME}/bin:$M2_HOME/bin:${PATH}"
+    }
     stages {
         stage('Build') {
             steps {
